# faster-gaussian-splatting

./: .gitignore  CMakeLists.txt  Renderer.py
FasterGSCudaBackend/: setup.py
FasterGSCudaBackend/FasterGSCudaBackend/rasterization/include/: buffer_utils.h  inference.h  kernels_inference.cuh
FasterGSCudaBackend/FasterGSCudaBackend/rasterization/src/: inference.cu
